fix: event list spacing

--- a/src/components/Share/EventBlock.css
+++ b/src/components/Share/EventBlock.css
@@ -1,20 +1,20 @@
 .event-block-container {
+    width: 120px;
+    margin-right: 20px;
 }
 
 .event-block-image {
     width: 120px;
     height: 80px;
+    margin: auto;
+    object-fit: cover;
 }
 
 .event-block-content {
+    text-align: center;
 }
 
 .event-block-content-name {
     font-size: 0.8rem;
     color: #333333;
-}
-
-.event-block-content-start-time {
-    font-size: 0.6rem;
-    color: #888888;
 }
